--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semáforo</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
@@ -26,18 +25,9 @@
 
     <div class="stop-wrap">
         <div class="smartphone">
-            <div class="volume-up-smartphone"></div>
-            <div class="volume-down-smartphone"></div>
-            <div class="power-smartphone"></div>
-            <div class="header-smartphone">
-                <div class="camera-smartphone"></div>
-                <div class="speaker-smartphone"></div>
-                <div class="led-smartphone"></div>
-            </div>
             <div class="screen-smartphone">
                 <button class="push--skeuo" id="stopbtn"></button>
             </div>
-            <div class="button-smartphone"></div>
         </div>
     </div>
  
@@ -55,10 +45,10 @@
 
     <div class="data-wrap">
         <div>
-            TOTAL METRO: <span id="tm"></span>
+            TOTAL DE METROS: <span id="tm"></span>
         </div>
         <div>
-            TOTAL PASOS: <span id="tp"></span>
+            TOTAL DE PASOS: <span id="tp"></span>
         </div>
     </div>
 
